force-app/main/default/objects/clofor_com_cfs__ConnectBillingCAsh__c/fields/clofor_com_cfs__BillingID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillingID__c</fullName>
    <label>BILLING ID</label>
    <referenceTo>clofor_com_cfs__Billing__c</referenceTo>
    <relationshipName>ConnectBillingCash</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>