force-app/main/default/objects/clofor_com_cfs__ConnectBillingCAsh__c/fields/clofor_com_cfs__UnpaidBalanceOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfBuyingUSD__c</fullName>
    <formula>clofor_com_cfs__BillingID__r.clofor_com_cfs__UnpaidBalanceOfBuyingUSD__c</formula>
    <label>UNPAID BALANCE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>