force-app/main/default/objects/clofor_com_cfs__ConnectBillingCAsh__c/fields/clofor_com_cfs__UnreceivedBalanceOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalanceOfSellingLocal__c</fullName>
    <formula>clofor_com_cfs__BillingID__r.clofor_com_cfs__UnreceivedBalanceLocal__c</formula>
    <label>UNRECEIVED BALANCE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>