force-app/main/default/objects/clofor_com_cfs__ConnectBillingCAsh__c/fields/clofor_com_cfs__WMSUnreceivedBalOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WMSUnreceivedBalOfSellingUSD__c</fullName>
    <label>WMS UNRECEIVED BAL OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>